--- a/inventory/group_vars/jdg.yml
+++ b/inventory/group_vars/jdg.yml
@@ -5,6 +5,7 @@ jdg_jdbc_url: jdbc:postgresql://pgsql-0:5432/keycloak
 jdg_jdbc_user: keycloak-user
 jdg_jdbc_pass: keycloak-pass
 jdg_jdbc_driver_version: 9.4.1212
+jdg_version: '8.2.3'
 admin_pass: admin_password
 user_accounts:
   - { name: 'ggraziol', password: 'admin', roles: 'deployer' }
