--- a/playbooks/jdg.yml
+++ b/playbooks/jdg.yml
@@ -7,24 +7,22 @@
   roles:
     - redhat_csp_download
   tasks:
+    - name: "Configure firewalld for Red Hat Data Grid"
+      include_role:
+        name: infinispan
+        tasks_from: firewalld.yml
     - name: "Install Red Hat Data Grid"
       include_role:
         name: infinispan
       vars:
         infinispan_users: "{{ user_accounts }}"
         supervisor_password: "{{ admin_pass }}"
-
-    - name: "Configure firewalld for Red Hat Data Grid"
-      include_role:
-        name: infinispan
-        tasks_from: firewalld.yml
-
     - name: "Create kitchensink cache"
       include_role:
-        name: infinispan
-        tasks_from: cache.yml
+        name: infinispan_cache
       vars:
-        jdg_username: supervisor
-        jdg_password: "{{ admin_pass }}"
-        cache:
-          name: kitchensink_sql_cache
+        deployer_password: "{{ admin_pass }}"
+        cache_xml: >
+             <local-cache name="kitchensink_sql_cache" statistics="true">
+               <encoding media-type="application/x-protostream"/>
+             </local-cache>
