--- a/roles/flange_fastpackages/tasks/build-packages-list-to-install.yml
+++ b/roles/flange_fastpackages/tasks/build-packages-list-to-install.yml
@@ -9,14 +9,9 @@
       warn: no
     register: rpm_info
     changed_when: rpm_info.failed
+
   rescue:
-
-  - name: "If package {{ package_name }} is missing, install package using yum."
-    set_fact:
-      packages_to_install: "{{ packages_to_install }},{{ package_name }}"
-    when: rpm_info.failed and packages_to_install != ""
-
-  - name: "If package {{ package_name }} is missing, install package using yum."
-    set_fact:
-      packages_to_install: "{{ package_name }}"
-    when: rpm_info.failed and packages_to_install == ""
+    - name: "If package {{ package_name }} is missing, add it to the yum install list."
+      set_fact:
+        packages_to_install: "{{ packages_to_install + [ package_name ] }}"
+      when: rpm_info.failed
