--- a/roles/flange_fastpackages/tasks/main.yml
+++ b/roles/flange_fastpackages/tasks/main.yml
@@ -1,20 +1,17 @@
 ---
 - set_fact:
     update_cache: true
+    packages_to_install: []
 
-- block:
-  - set_fact:
-      packages_to_install: ""
+- name: "Check packages to be installed"
+  include_tasks: tasks/build-packages-list-to-install.yml
+  loop: "{{ packages_list | flatten }}"
+  loop_control:
+    loop_var: package_name
 
-  - name: "Include"
-    include_tasks: tasks/build-packages-list-to-install.yml
-    loop: "{{ packages_list }}"
-    loop_control:
-      loop_var: package_name
-
-  - name: "Test if any packages are left to install: {{ packages_to_install }}"
-    become: yes
-    yum:
-      name: "{{ packages_to_install }}"
-      state: latest
-    when: packages_to_install != ""
+- name: "Install packages: {{ packages_to_install }}"
+  become: yes
+  yum:
+    name: "{{ packages_to_install }}"
+    state: latest
+  when: packages_to_install | length > 0
