--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,7 +1,8 @@
 ---
 dependency:
-  name: shell
-  command: ansible-galaxy collection install -r molecule/default/requirements.yml -p $HOME/.ansible/collections --force-with-deps
+  name: galaxy
+  options:
+    requirements-file: molecule/default/requirements.yml
 driver:
   name: docker
 platforms:
@@ -31,11 +32,6 @@ platforms:
       - "8209/tcp"
 provisioner:
   name: ansible
-  config_options:
-    defaults:
-      interpreter_python: auto_silent
-    ssh_connection:
-      pipelining: false
   playbooks:
     prepare: prepare.yml
     converge: converge.yml
@@ -60,7 +56,7 @@ scenario:
     - create
     - prepare
     - converge
-    # -   idempotence
+      #- idempotence
     - side_effect
     - verify
     - cleanup
