--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -21,15 +21,15 @@ platforms:
       - keycloak
       - jdg
       - pgsql
-    port_bindings:
-      - "8080/tcp"
-      - "8443/tcp"
-      - "8009/tcp"
-      - "11222/tcp"
-      - "5432/tcp"
-      - "8280/tcp"
-      - "8643/tcp"
-      - "8209/tcp"
+#    port_bindings:
+#      - "8080/tcp"
+#      - "8443/tcp"
+#      - "8009/tcp"
+#      - "11222/tcp"
+#      - "5432/tcp"
+#      - "8280/tcp"
+#      - "8643/tcp"
+#      - "8209/tcp"
 provisioner:
   name: ansible
   playbooks:
