--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -40,7 +40,7 @@ provisioner:
     ANSIBLE_FORCE_COLOR: "true"
   inventory:
     links:
-      hosts: ../../inventory/hosts
+      hosts: ../../inventory/localhost
       group_vars: ../../inventory/group_vars
     localhost:
       ansible_python_interpreter: "{{ ansible_playbook_python }}"
