--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -5,9 +5,11 @@ collections:
   - name: middleware_automation.redhat_csp_download
     version: ">=1.2.1"
   - name: middleware_automation.infinispan
-    version: ">=0.1.1"
+    version: ">=0.1.6"
   - name: middleware_automation.keycloak
-    version: ">=0.1.7"
+    version: ">=0.2.2"
+  - name: middleware_automation.wildfly
+    version: ">=0.0.5"
   - name: community.general
   - name: community.postgresql
   - name: community.docker
