--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install yamllint 'molecule[docker]~=3.5.2' ansible==2.9.27 netaddr flake8 ansible-lint voluptuous
+          pip install -r requirements.txt
 
       - name: Run molecule test
         run: |
