--- a/inventory/group_vars/wildfly.yml
+++ b/inventory/group_vars/wildfly.yml
@@ -6,4 +6,4 @@ wildfly_archive_filename: "wildfly-{{ wildfly_version }}.zip"
 wildfly_install_download_url: "https://github.com/wildfly/wildfly/releases/download/{{ wildfly_version }}/{{ wildfly_archive_filename }}"
 wildfly_bind_addr: 0.0.0.0
 nb_instance_by_node: 2
-wildfly_offline_install: yes
+wildfly_offline_install: false
