--- a/playbooks/demo.yml
+++ b/playbooks/demo.yml
@@ -5,7 +5,7 @@
 - import_playbook: postgresql.yml
 
 # JBoss Core Services (Apache HTTPD)
-- import_playbook: jbcs.yml
+#- import_playbook: jbcs.yml
 
 # Datagrid Playbook
 - import_playbook: jdg.yml
