--- a/inventory/group_vars/keycloak.yml
+++ b/inventory/group_vars/keycloak.yml
@@ -2,7 +2,7 @@
 keycloak_ha_enabled: True
 keycloak_modcluster_url: jbcs-0
 keycloak_frontend_url: "https://{{keycloak_modcluster_url}}/auth"
-admin_pass: "redhat1!"
+admin_pass: "admin_password16"
 keycloak_configure_firewalld: True
 
 infinispan_url: jdg-1
