--- a/playbooks/jdg.yml
+++ b/playbooks/jdg.yml
@@ -6,17 +6,10 @@
     - middleware_automation.infinispan
   roles:
     - redhat_csp_download
+    - name: infinispan
+      supervisor_password: "{{ admin_pass }}"
+      infinispan_users: "{{ user_accounts }}"
   tasks:
-    - name: "Configure firewalld for Red Hat Data Grid"
-      include_role:
-        name: infinispan
-        tasks_from: firewalld.yml
-    - name: "Install Red Hat Data Grid"
-      include_role:
-        name: infinispan
-      vars:
-        infinispan_users: "{{ user_accounts }}"
-        supervisor_password: "{{ admin_pass }}"
     - name: "Create kitchensink cache"
       include_role:
         name: infinispan_cache
