--- a/playbooks/jbcs.yml
+++ b/playbooks/jbcs.yml
@@ -5,7 +5,4 @@
     - middleware_automation.redhat_csp_download
   roles:
     - redhat_csp_download
-  tasks:
-    - name: "JBoss Core Services"
-      include_role:
-        name: flange_jbcs
+    - flange_jbcs
