--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -45,9 +45,9 @@ provisioner:
   inventory:
     links:
       hosts: ../../inventory/hosts
-      group_vars: ../../inventory/group_vars
-    localhost:
-      ansible_python_interpreter: "{{ ansible_playbook_python }}"
+      group_vars: group_vars
+    all:
+      ansible_python_interpreter: /usr/bin/python3.9
 verifier:
   name: ansible
 scenario:
