--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -4,10 +4,12 @@ collections:
     version: ">=0.0.21"
   - name: middleware_automation.redhat_csp_download
     version: ">=1.2.1"
-  - name: middleware_automation.infinispan
-    version: ">=0.1.6"
-  - name: middleware_automation.keycloak
-    version: ">=0.2.3"
+  - name: git@github.com:ansible-middleware/infinispan.git
+    scm: git
+    version: main
+  - name: git@github.com:ansible-middleware/keycloak.git
+    scm: git
+    version: main
   - name: middleware_automation.wildfly
     version: ">=0.0.5"
   - name: community.general
