more molecule updates

--- a/requirements.yml
+++ b/requirements.yml
@@ -4,14 +4,13 @@ collections:
     version: ">=0.0.21"
   - name: middleware_automation.redhat_csp_download
     version: ">=1.2.1"
-  - name: git@github.com:ansible-middleware/infinispan.git
-    scm: git
-    version: main
-  - name: git@github.com:ansible-middleware/keycloak.git
-    scm: git
-    version: main
+  - name: middleware_automation.infinispan
+    version: ">=1.0.3"
+  - name: middleware_automation.keycloak
+    version: ">=1.0.4"
   - name: middleware_automation.wildfly
     version: ">=0.0.5"
   - name: community.general
   - name: community.postgresql
+  - name: ansible.netcommon
   - name: ansible.posix
