--- a/roles/flange_wildfly/tasks/jcliff-with-keycloak.yml
+++ b/roles/flange_wildfly/tasks/jcliff-with-keycloak.yml
@@ -5,6 +5,7 @@
     state: present
 
 - name: "Fine tuning configuration: {{ instance_name | default('localhost') }}"
+  when: rhn_username is defined
   jcliff:
     wfly_home: "{{ wildfly.home }}"
     rule_file: roles/flange_wildfly/files/custom/
