--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -18,6 +18,8 @@
 - import_playbook: ../../playbooks/keycloak.yml
   vars:
     ansible_distribution: 'RedHat'
+  when:
+    - rhn_username is defined
 
 # Wildfly Playbook
 - import_playbook: ../../playbooks/wildfly.yml
