--- a/podman/ansible-local.cfg
+++ b/podman/ansible-local.cfg
@@ -1,7 +1,7 @@
 [defaults]
 host_key_checking = False
 retry_files_enabled = False
-callback_whitelist = profile_tasks
+callbacks_enabled = profile_tasks
 transport = local
 
 [inventory]
