--- a/roles/flange_wildfly/tasks/keycloak/keycloak-extension-install.yml
+++ b/roles/flange_wildfly/tasks/keycloak/keycloak-extension-install.yml
@@ -20,6 +20,8 @@
     connect_timeout: 3
     delay: 5
     timeout: 60
+  when:
+    - rhn_username is defined
 
 - block:
     - name: Check if Keycloak extensions installed
@@ -44,4 +46,5 @@
             chdir: "{{ wildfly.home }}"
   when:
     - not disable_keycloak
+    - rhn_username is defined
   throttle: 1
