--- a/roles/flange_wildfly/tasks/main.yml
+++ b/roles/flange_wildfly/tasks/main.yml
@@ -41,4 +41,4 @@
     nb_instances: "{{ (nb_instances | int) +1 }}"
 
 - include_tasks: appserver.yml
-  loop: "{{ range(1, (nb_instance_by_node|int + 1)) | list }}"
+  loop: "{{ range(1, (nb_instance_by_node| default(2) |int + 1)) | list }}"
